# viardot

./: .eslintrc.cjs  .eslintrc.js  .eslintrc.yml  .gitignore  .prettierrc.yml  Cargo.toml  README  README.md  audio-nodes.js  example.js  example.ts  glottis-processor.js  index.html  index.js  main.js  math-utils.js  package-lock.json  package.json  simplex.js  style.css  tract-processor.js  tsconfig.json  viardot-1.0.3.tgz  viardot-1.0.5.tgz  viardot.js  vite.config.js
.github/: FUNDING.yml
_old/rust/: errors.rs  lib.rs  waveform.rs
_old/rust/serialization/: midi.rs  mod.rs
_old/rust/voice/: mod.rs
assets/: arpa-to-ipa.txt  cmudict-0.7b.txt  viardot.glb
assets/head/: HEAD-RIG06.max
assets/head/textures/: Thumbs.db
audio-processors/: aspirator.js  glottis.js  noise-modulator.js  simplex.js  tract-filter.js
core/: Cargo.toml
core/src/source/: glottis.rs  mod.rs
core/src/utils/: mod.rs
docs/: CNAME  index.html
docs/assets/: index.311bc694.js  index.78f33499.js  index.e638cfab.css  vendor.dd833de9.js
docs/worklets/: aspirator.js  glottis.js  tract.js
modules/: aspirator.js  noise-modulator.js  tract-filter.js
public/worklets/: glottis.js  noise-modulator.js  tract.js
rust/: Cargo.toml
rust/src/: filter.rs  lib.rs
rust/src/theory/: mod.rs
rust/src/utils/: consts.rs  mod.rs
rust/src/voice/glottis/: mod.rs
rust/src/voice/tract/: mod.rs
src/: App.css  App.jsx  EventBus.js  context.ts  dictionaries.ts  ease.ts  enums.ts  freeverb.ts  global.ts  index.ts  nodes.js  nodes.ts  phonemes.ts  utils.ts  viardot.js  viardot.ts  voice.ts  voice.worklet.ts  voiceNode.ts  worklet.ts  workletNode.ts
src/components/: GUI.jsx  Render.jsx  TractUI.jsx
src/core/src/: lib.rs
src/cpp/: functions.cpp  tract.cpp
src/nodes/: glottalSourceNode.ts  noiseNode.ts  tractFilterNode.ts  workletNode.ts
src/rust/: Cargo.toml  main.rs
src/rust/src/: cavity.rs  errors.rs  filter.rs  glottis.rs  lib.rs  main.rs  processor.rs  synthesis.rs  synthesizer.rs  tract.rs  waveform.rs
src/rust/src/serialization/: wav.rs
src/rust/src/theory/: chord.rs  mod.rs  note.rs
src/rust/src/tract/: cavity.rs  mod.rs
src/rust/src/utils/: consts.rs  mod.rs  noise.rs
src/rust/src/voice/: mod.rs
src/rust/src/voice/glottis/: mod.rs
src/rust/src/voice/tract/: cavity.rs  mod.rs
src/testing/: Cargo.toml
src/testing/src/: main.rs  stream.rs
src/viardot/: viardot.js
src/viardot/worklets/: aspirator.js  glottis.js  math-utils.js  noise-modulator.js  tract.js  worklet-nodes.js
src/vst/: Cargo.toml
src/web/: Cargo.toml  build.sh
src/web/src/: lib.rs
src/web/www/: next.config.js  package.json
src/web/www/pages/: index.tsx
src/web/www/public/: web.wasm  worklet.js
src/worklet/: glottalSource.worklet.ts  tractFilter.worklet.ts  utils.ts  voice.worklet.ts
src/worklets/: aspirator.js
test/: package-lock.json  package.json  tailwind.config.js
test/public/pkg/: belcanto.d.ts  belcanto.js  belcanto_bg.wasm  (+2 more)
test/src/: App.css  App.tsx  Visualization.tsx  main.tsx
testing/src/: main.rs
vst/: README.md  bundler.sh
vst/src/: lib.rs
worklets/: aspirator.js  glottis.js  noise-modulator.js  tract.js  worklet-nodes.js
(+12 files in other folders)
