[package]
authors = ["Louis Dutton <clouisdutton@gmail.com>"]
edition = "2021"
license = "MIT"
name = "viardot"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
byteorder = "1.4.3"
console_error_panic_hook = {version = "0.1.7", optional = true}
getrandom = {version = "0.2.3", features = ["js"]}
num = "0.4.0"
rand = "0.8.4"
wasm-bindgen = "0.2.78"
wee_alloc = {version = "0.4.5", optional = true}

# [dependencies.web-sys]
# version = "0.3.55"
# features = [
#   'AudioContext',
#   'AudioDestinationNode',
#   'AudioNode',
#   'AudioParam',
#   'GainNode',
#   'OscillatorNode',
#   'OscillatorType',
# ]

[dev-dependencies]
wasm-bindgen-test = "0.3.28"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
