[package]
name = "belcanto"
version = "0.1.0"
authors = ["Louis Dutton <clouisdutton@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
wasm-bindgen = "0.2.63"
noise = "0.7.0"
console_error_panic_hook = { version = "0.1.1", optional = true }

[dependencies.web-sys]
version = "0.3.55"
features = [
  'AudioContext',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  'GainNode',
  'OscillatorNode',
  'OscillatorType',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.28"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"