[package]
name = "belcanto"
version = "0.1.0"
authors = ["Louis Dutton <clouisdutton@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
wasm-bindgen = "0.2.78"
simdnoise = "3.1.6"
console_error_panic_hook = { version = "0.1.7", optional = true }
rand = "0.8.4"

[dependencies.web-sys]
version = "0.3.55"
features = [
  'AudioContext',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  'GainNode',
  'OscillatorNode',
  'OscillatorType',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.28"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"