[package]
name = "belcanto"
version = "0.1.0"
authors = ["Louis Dutton <clouisdutton@gmail.com>"]
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.78"
# console_error_panic_hook = { version = "0.1.7", optional = true }
rand = "0.8.4"
getrandom = { version = "0.2.3", features = ["js"] }
byteorder = "1.2.7"
num = "0.4.0"

# [dependencies.web-sys]
# version = "0.3.55"
# features = [
#   'AudioContext',
#   'AudioDestinationNode',
#   'AudioNode',
#   'AudioParam',
#   'GainNode',
#   'OscillatorNode',
#   'OscillatorType',
# ]

[dev-dependencies]
wasm-bindgen-test = "0.3.28"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"