[package]
edition = "2021"
name = "web"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
core = {path = "../core"}
getrandom = {version = "0.2.4", features = ["js"]}
# wasm-bindgen = "0.2.78"
wee_alloc = "0.4.5"
